--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "playwright": "^1.36.2"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test",
+    "report": "allure generate --clean && allure open"
+  },
   "devDependencies": {
     "@playwright/test": "^1.36.2",
     "allure-playwright": "^2.5.0"
