fix - add rm and new script

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "playwright": "^1.36.2"
   },
   "scripts": {
+    "test-and-report": "(npx playwright test || npm run report) && npm run report",
     "test": "npx playwright test",
     "report": "allure generate --clean && allure open"
   },
